<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Thierry-Dimitri Roy <thierryd@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">ADG Mobile</string>
	<string name="noContentFound">Aucun contenu trouvé</string>
	<string name="podcast">Podcast</string>
	<string name="twitter">Twitter</string>
	<string name="loading">Chargement&#8230;</string>
	<string name="play">Jouer</string>
	<string name="crash_toast_text">Oups, une erreur est survenue. Un rapport d\'incident a été envoyé à l\'équipe de développement</string>
	<string name="support">Dons</string>
	<string name="about">À propos</string>
	<string name="facebook">Facebook</string>
	<string name="forum">Forum</string>
	<string name="contact">Contact</string>
	<string name="web">Site Web</string>
	<string name="commanditaires">Commanditaires</string>
	<string name="and">et</string>
	<string name="madeBy">Réalisé Par</string>
	<string name="moog_audio">Moog Audio</string>
	<string name="cipc">CPIC</string>
	<string name="comments">Commentaires</string>
	<string name="byEmail">Par courriel</string>
	<string name="youCanContactByEmail">Vous pouvez rejoindre l\'Analyse des Geeks pour courriel:</string>
	<string name="market">Market</string>
	<string name="useMarket">Laisser un commentaire sur le Android Market:</string>
	<string name="aProblem">Un problème ou des questions sur l\'application:</string>
	<string name="contactSupport">Support</string>
	<string name="contactEmailSubject">Contact - Analyse des Geeks</string>
	<string name="sendEmail">Envoyer un courriel</string>
	<string name="analyseDesGeeks">Analyse des Geeks</string>
	<string name="logo">Logo</string>
	<string name="sourceCode">Code source</string>
	<string name="playPause">Jouer/Pause</string>
	<string name="sourceCodeDesc"><![CDATA[Dans la plus pure tradition Android, le code source de cette application est disponible gratuitement à <a href="http://github.com/thierryd/adg-android">http://github.com/thierryd/adg-android</a>.]]></string>
	
	<string translatable="false" name="durationformatshort"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
	<string translatable="false" name="durationformatlong"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
</resources>